--- a/src/home/navbar/nav.module.css
+++ b/src/home/navbar/nav.module.css
@@ -1,9 +1,17 @@
+.container{
+  height: 10vh;
+}
 .headerContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 1.5rem;
     color: #fff;
+    position: fixed;
+    top: 0;
+    width: 90%;
+    background-color: aliceblue;
+    z-index: 10001;
   }
   
   .logo {
@@ -73,6 +81,9 @@
   }
   
   @media (max-width: 1000px) {
+    .container{
+      height: 6vh;
+    }
     .navLinks {
       display: none;
     }
