--- a/src/home/footer/footer.module.css
+++ b/src/home/footer/footer.module.css
@@ -23,6 +23,15 @@
     padding-left: 40px;
     padding-right: 20px;
 }
+.troubleshoot{
+    height: auto;
+    padding: 20px;
+    font-size: 20px;
+    background-color: #5380f5;
+    color: white;
+    width: auto;
+    border-radius: 10px;
+}
 .footerNavLinks>a{
     color: gray;
     text-decoration: none;
