--- a/src/home/HomePage/homepage.module.css
+++ b/src/home/HomePage/homepage.module.css
@@ -57,7 +57,10 @@
   }
   @media (max-width: 390px), 
   (max-width: 414px), 
-  (max-width: 430px)   {
+  (max-width: 430px),
+  (max-width:600px)
+  /* (max-width:900px)   */
+   {
 
     .container{
         flex-direction: column;
@@ -74,11 +77,15 @@
         gap: 1rem;
         width: 95%;
         align-items: center; 
+        margin: 0 auto;
+        justify-content: center;
       }
     .createAccountButton,
     .importAccountButton {
-      width: 90%; 
-      padding: 1rem;
+      width: 70%; 
+      padding: 1.2rem;
+      font-weight: 300;
+      font-size: 16px;
     }
  
     .largeImage {
