--- a/src/home/card/card.module.css
+++ b/src/home/card/card.module.css
@@ -94,7 +94,11 @@
     border: 1px solid black;
   }
   
-  @media (max-width: 1000px) {
+  @media (max-width: 1000px),
+  (max-width: 390px), 
+  (max-width: 414px), 
+  (max-width: 430px),
+  (max-width:600px) {
     .cardDiv {
       width: 90%;
       flex-direction: column-reverse;
@@ -102,6 +106,13 @@
       gap: 0.1rem;
       padding: 1rem;
 
+    }
+    .header {
+      font-size: 1.7rem;
+      font-weight: 800;
+      margin-bottom: 2rem;
+      width: 80%;
+      font-family: Arial, Helvetica, sans-serif;
     }
     .cardImage {
         width: 70%;
