--- a/src/home/navbar/nav.module.css
+++ b/src/home/navbar/nav.module.css
@@ -1,17 +1,22 @@
 .container{
   height: 10vh;
+  /* padding-top: 1rem; */
+  width: 100%;
+  background-color: #fff;
 }
 .headerContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem;
+    padding: 0.4rem;
     color: #fff;
     position: fixed;
     top: 0;
-    width: 98%;
-    background-color: aliceblue;
+    width: 100%;
+    height: 60px;
     z-index: 10001;
+    background-color: #fff;
+
   }
   
   .logo {
@@ -33,12 +38,14 @@
   }
   
   .launchAppButton {
-    padding: 1.5rem 1rem;
+    padding: 0.9rem 1.2rem;
     background-color: rgb(80, 80, 238);
     font-size: 20px;
     border-radius: 20px;
     color: #fff;
     border: none;
+    margin-right: 10px;
+    border: 2px solid red;
     cursor: pointer;
   }
   
@@ -53,6 +60,7 @@
     display: block;
     width: 25px;
     height: 2px;
+    margin-right: 10px;
     background-color: #fff;
     position: relative;
   }
@@ -83,6 +91,7 @@
   @media (max-width: 1000px) {
     .container{
       height: 6vh;
+      /* width: 100%; */
     }
     .navLinks {
       display: none;
@@ -92,11 +101,16 @@
     }
     .logo{
       width: 150px;
+      padding-left: 10px;
     }
     .hamburgerButton {
       display: block;
+      margin-right: 20px;
     }
-  
+    .headerContainer{
+      width: 100%;
+    }
+    
     .navLinks.open {
       display: flex;
       flex-direction: column;
